# cta-benchmark

./: .env.example  .gitignore  .gitleaks.toml  ARTIFACT_CARD.md  CITATION.cff  CI_STATUS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  NOTICE  README.md  REPRODUCE.md  SECURITY.md  deny.toml  requirements-hf.txt
annotation/: DOUBLE_ANNOTATION_PROTOCOL.md  RUBRIC.md  adjudication_log.csv  agreement_packet_ids.csv  agreement_raw_table.csv  agreement_report.json  agreement_report.md  annotator_packet_sheet_template.csv  annotator_semantic_unit_sheet_template.csv  rater_a.csv  rater_a.example.csv  rater_a_strict_all.csv  rater_b.csv  rater_b.example.csv  schema.json
appendix/: PROMPTS_APPENDIX.md
artifacts/: README.md  evidence_hardening_manifest.json  final_ci_run_20260427.md  final_ci_run_20260428.md  final_ci_run_20260501.md  release_validation.md  submission_validation_matrix.md
benchmark/: manifest.jsonl
configs/: cross_model_pilot.json  paper_system_cards_v03.json
crates/cta_annotations/: Cargo.toml
crates/cta_annotations/src/: lib.rs
crates/cta_behavior/: Cargo.toml
crates/cta_behavior/src/: generators.rs  lib.rs  pilot.rs
crates/cta_behavior/tests/: pilot_smoke.rs
crates/cta_benchmark/: Cargo.toml
crates/cta_benchmark/src/: authoring_lint.rs  lib.rs  lint.rs  loader.rs  manifest.rs  model.rs  release_checks.rs  splits.rs
crates/cta_benchmark/tests/: pilot.rs
crates/cta_cli/: Cargo.toml
crates/cta_cli/src/: main.rs
crates/cta_cli/src/cmd/: annotate.rs  behavior.rs  benchmark.rs  experiment.rs  extract.rs  generate.rs  lean.rs  metrics.rs  mod.rs  reports.rs  validate.rs
crates/cta_core/: Cargo.toml
crates/cta_core/src/: enums.rs  error.rs  ids.rs  lib.rs  versions.rs
crates/cta_generate/: Cargo.toml
crates/cta_generate/src/: lib.rs  normalize.rs  pipeline.rs  prompts.rs  providers.rs
crates/cta_generate/tests/: code_only_packet_regression.rs  code_only_rust_injection.rs  family_packet_regression.rs  full_method_priority1_packet_regression.rs  full_method_priority2_packet_regression.rs  naive_concat_packet_regression.rs  normalize_proptest.proptest-regressions  normalize_proptest.rs  pipeline_smoke.rs  prompt_snapshots.rs  review_packet_lean_lint.rs  text_only_packet_regression.rs
crates/cta_generate/tests/snapshots/: prompt_snapshots__code_only_v1.snap  prompt_snapshots__full_method_v1.snap  prompt_snapshots__naive_concat_v1.snap  prompt_snapshots__text_only_v1.snap
crates/cta_lean/: Cargo.toml
crates/cta_lean/src/: lib.rs
crates/cta_metrics/: Cargo.toml
crates/cta_metrics/src/: agreement.rs  lib.rs
crates/cta_metrics/tests/: m6_pipeline.rs  multi_annotator_pipeline.rs
crates/cta_reports/: Cargo.toml
crates/cta_reports/src/: aggregate.rs  lib.rs
crates/cta_reports/tests/: snapshots.rs
crates/cta_reports/tests/snapshots/: snapshots__instance_results_csv.snap  snapshots__primary_metrics_csv.snap  snapshots__render_all.snap  snapshots__results_latex.snap  snapshots__results_markdown.snap
crates/cta_rust_extract/: Cargo.toml
crates/cta_rust_extract/src/: lib.rs
crates/cta_rust_extract/tests/: pilot_golden.rs
crates/cta_schema/: Cargo.toml
crates/cta_schema/src/: lib.rs
docs/: LIMITATIONS.md  PAPER_READINESS.md  PROVENANCE.md  REVIEWER_MAP.md  adjudication_wave_checklist.md  annotation_manual.md  annotation_sampling_v03.md  annotator_calibration_v03.md  architecture.md  authoring_examples.md  benchmark_spec.md  direct_adjudication_wave_checklist.md  evaluation_contract.md  failure_mode_ontology.md  maintainers.md  obligation_audit_v0.1.md  paper_readiness.md  release_process.md  repair_protocol_v03.md  reproducibility.md
experiments/: PER_RUN_MANIFEST.md  run_manifest.schema.json
lean/: CTA.lean  lake-manifest.json  lakefile.lean
notebooks/: analysis.ipynb
repairs/: PROOF_STATUS.md  hotspot_selection.csv  paper_proof_facing_subset.csv  paper_repair_proof_subset.csv  paper_repair_status.csv  paper_repair_success_subset.csv  repair_attempt_summary.md  repair_attempts.csv  repair_log.jsonl  repair_outcomes_summary.csv
reports/: croissant_validation_2026.md
results/: composite_sensitivity.csv  cross_model_pilot_appendix_table.csv  cross_model_pilot_external_appendix.json  cross_model_pilot_failure_examples.md  cross_model_pilot_instance_level.csv  cross_model_pilot_manifest.json  cross_model_pilot_rows.csv  cross_model_pilot_summary.csv  failure_mode_counts.csv  family_consistency_summary.csv  family_faithfulness_summary.csv  family_proof_utility_summary.csv  family_reliability_summary.csv  family_summary.csv  family_vacuity_summary.csv  instance_level.csv  paper_annotation_origin_counts.csv  paper_cost_runtime_accounting.csv  paper_expanded_failure_modes.csv  paper_expanded_family_reliability_summary.csv  paper_expanded_family_summary.csv  paper_expanded_system_summary.csv  paper_family_diagnostic_summary.csv  paper_model_metadata_registry.csv  paper_primary_model_registry.csv  paper_strict_coverage_gap.csv  paper_strict_failure_modes.csv  paper_strict_family_reliability_summary.csv  paper_strict_family_summary.csv  paper_strict_instance_level.csv  paper_strict_system_consistency_summary.csv  paper_strict_system_faithfulness_summary.csv  paper_strict_system_metrics_long.csv  paper_strict_system_proof_utility_summary.csv  paper_strict_system_reliability_summary.csv  paper_strict_system_summary.csv  paper_strict_system_vacuity_summary.csv  paper_system_set.md  paper_table_agreement_evidence.csv  paper_table_annotation_evidence.csv  (+24 more)
schemas/: ai_draft_annotation.schema.json  annotation.schema.json  annotation_pack_manifest.schema.json  benchmark_manifest.schema.json  experiment.schema.json  failure_mode_ontology.schema.json  failure_mode_v1.json  generated_output.schema.json  harness.schema.json  instance.schema.json  obligation.schema.json  protocol_freeze.schema.json  results_bundle.schema.json  review_packet.schema.json  run_manifest.schema.json  semantic_units.schema.json
scripts/: add_rai_to_croissant.py  annotation_burndown.ps1  apply_direct_adjudication_wave.py  (+54 more)
(+1608 files in other folders)
