[workspace]
resolver = "2"
members = [
    "crates/cta_core",
    "crates/cta_schema",
    "crates/cta_benchmark",
    "crates/cta_rust_extract",
    "crates/cta_generate",
    "crates/cta_lean",
    "crates/cta_behavior",
    "crates/cta_annotations",
    "crates/cta_metrics",
    "crates/cta_reports",
    "crates/cta_cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
authors = ["CTA-Benchmark Contributors"]
license = "MIT"
repository = "https://github.com/fraware/cta-benchmark"
readme = "README.md"

[workspace.dependencies]
# Internal crates
cta_core = { path = "crates/cta_core", version = "0.1.0" }
cta_schema = { path = "crates/cta_schema", version = "0.1.0" }
cta_benchmark = { path = "crates/cta_benchmark", version = "0.1.0" }
cta_rust_extract = { path = "crates/cta_rust_extract", version = "0.1.0" }
cta_generate = { path = "crates/cta_generate", version = "0.1.0" }
cta_lean = { path = "crates/cta_lean", version = "0.1.0" }
cta_behavior = { path = "crates/cta_behavior", version = "0.1.0" }
cta_annotations = { path = "crates/cta_annotations", version = "0.1.0" }
cta_metrics = { path = "crates/cta_metrics", version = "0.1.0" }
cta_reports = { path = "crates/cta_reports", version = "0.1.0" }

# Serde / JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
schemars = { version = "0.8", features = ["preserve_order"] }
jsonschema = { version = "0.18", default-features = false }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Hashing / crypto
sha2 = "0.10"
hex = "0.4"

# Filesystem / paths
walkdir = "2.5"
camino = { version = "1.1", features = ["serde1"] }

# Time / uuid
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
uuid = { version = "1.10", features = ["serde", "v4"] }

# Regex
regex = "1.10"
once_cell = "1.19"

# Rust syntax (for cta_rust_extract)
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

# HTTP (for cta_generate live providers) — blocking client; no tokio runtime.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }

# Rand (for harnesses, deterministic)
rand = "0.8"
rand_chacha = "0.3"

# Cross-platform process timeouts.
wait-timeout = "0.2"

# Testing
pretty_assertions = "1.4"
insta = { version = "1.40", features = ["json", "yaml"] }
tempfile = "3.10"
proptest = "1.5"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
# Group-level policy. `all` is on by default as a deny-level baseline;
# `pedantic` lints are enabled for local visibility but capped at `allow`
# at the workspace level so CI's `-D warnings` stays tractable. Individual
# crates opt in with `#[warn(clippy::...)]` when useful.
all = { level = "deny", priority = -1 }
pedantic = { level = "allow", priority = -1 }

# Denied anti-patterns in production code. Tests may disable these locally
# via `#![cfg_attr(test, allow(clippy::unwrap_used, clippy::expect_used))]`
# or via per-function `#[allow(...)]`; `unwrap` is also tolerated inside
# `#[cfg(test)]` modules (see the individual crate's `cfg_attr` annotations).
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"

# Style lints we allow: benign in a first-pass skeleton.
uninlined_format_args = "allow"
# We deliberately use Result-returning stubs for CLI commands that will later
# perform IO; they should not be rewritten as `fn() {}` just because the
# current body is infallible.
unnecessary_wraps = "allow"

[profile.release]
lto = "thin"
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
