[package]
name = "cta_benchmark"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Benchmark loading, indexing, linting, and manifest hashing for CTA."

[dependencies]
cta_core = { workspace = true }
cta_schema = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
walkdir = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
time = { workspace = true }
regex = "1.10"

[dev-dependencies]
tempfile = { workspace = true }
pretty_assertions = { workspace = true }

[lints]
workspace = true
