[package]
name = "cta_cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Single CLI entry point for the CTA benchmark toolchain."

[[bin]]
name = "cta"
path = "src/main.rs"

[dependencies]
cta_core = { workspace = true }
cta_schema = { workspace = true }
cta_benchmark = { workspace = true }
cta_rust_extract = { workspace = true }
cta_generate = { workspace = true }
cta_lean = { workspace = true }
cta_behavior = { workspace = true }
cta_annotations = { workspace = true }
cta_metrics = { workspace = true }
cta_reports = { workspace = true }

clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = { workspace = true }
time = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
dotenvy = "0.15.7"

[dev-dependencies]
tempfile = { workspace = true }
pretty_assertions = { workspace = true }

[lints]
workspace = true
