[package]
name = "cta_metrics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Deterministic, pure metric computation for CTA benchmark runs."

[dependencies]
cta_core = { workspace = true }
cta_annotations = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
cta_schema = { workspace = true }

[lints]
workspace = true
